--- a/Sky High/a.css
+++ b/Sky High/a.css
@@ -226,91 +226,8 @@ body {
 }
 
 .mobile-menu-btn.active .bar:nth-child(3) {
-  transform: translateY(-8px) rotate(-45deg);
+  transform: translateY(-8px) rotate(-45deg)
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* SM: Mobile phones (≤ 480px) */
 @media (max-width: 480px) {
     /* Styles for small screens */
@@ -346,29 +263,6 @@ justify-content: center;
 gap: 3px;
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .bcard {
   flex: 0 0 28%;
@@ -658,22 +552,6 @@ height: auto;
             transform: translateY(-3px);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
    /* Our Story Section */
         .our-story {
             padding: 100px 0;
@@ -746,17 +624,6 @@ height: auto;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
         
-
-
-
-
-
-
-
-
-
-
-
 .containera {
             width: 100%;
             max-width: 600px; /* Smaller container */
@@ -770,91 +637,6 @@ height: auto;
                 url('https://images.unsplash.com/photo-1506318137071-a8e063b4bec0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center;
             background-size: cover; 
         }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 body {
   margin: 0;
@@ -871,9 +653,6 @@ nav {
   align-items: center;
 }
 
-
-
-
 .logo {
   font-size: 24px;
   word-spacing: 19px;
@@ -887,41 +666,6 @@ footer {
    padding: 60px  0 20px;
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         /* Global Styles */
         :root {
